latest code changes 05/13/2017

--- a/KNR-Client/app/components/editRiceMill/editRiceMill.html
+++ b/KNR-Client/app/components/editRiceMill/editRiceMill.html
@@ -90,14 +90,14 @@
 						<span class="input-group-addon">First Name</span> <input
 							id="primarycontact" type="text" class="form-control"
 							name="primarycontact" placeholder="Enter First Name"
-							ng-model="newPrimaryContact">
+							ng-model="newFirstName">
 					</div>
 					<br/>
 					<div class="input-group">
 						<span class="input-group-addon">Last Name</span> <input
 							id="primarycontact" type="text" class="form-control"
 							name="primarycontact" placeholder="Enter Last Name"
-							ng-model="newPrimaryContact">
+							ng-model="newLastName">
 					</div>
 					<br/>
 					<div class="input-group">
@@ -117,14 +117,14 @@
 						<span class="input-group-addon">First Name</span> <input
 							id="primarycontact" type="text" class="form-control"
 							name="primarycontact" placeholder="Enter First Name"
-							ng-model="newSecondaryContact">
+							ng-model="newFirstName">
 					</div>
 					<br/>
 					<div class="input-group">
 						<span class="input-group-addon">Last Name</span> <input
 							id="primarycontact" type="text" class="form-control"
 							name="primarycontact" placeholder="Enter Last Name"
-							ng-model="newSecondaryContact">
+							ng-model="newLastName">
 					</div>
 					<br/>
 					<div class="input-group">
