--- a/KNR-Client/app/app.css
+++ b/KNR-Client/app/app.css
@@ -29,3 +29,27 @@
 	color: #ffffff;
 }
 
+.btn-primary {
+	background-color: #575a5e;
+	width: 130px;
+	color: #ce9e1a; 
+	float: right;
+}
+
+.btn-primary:hover {
+	background-color: #575a5e;
+	width: 130px;
+	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2) inset;
+	font-size: 1.1em;
+}
+
+.btn-primary:active {
+	background-color: #575a5e;
+	width: 130px;
+}
+
+.btn-primary:focus {
+	background-color: #575a5e;
+	width: 130px;
+	
+}
